--- a/UntukLia/index.html
+++ b/UntukLia/index.html
@@ -19,9 +19,10 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
-      nomorWhatsapp = ``;
+      ucapan = `Selamat Ulang Tahun Riska Amelia
+      Semoga panjang umur sehat selalu yaa🎂🎂🎂🎂🎂`;
+      musik = `Until I Found You .mp3`;
+      nomorWhatsapp = `+62895356644447`;
       idTelegram = ``;
 
       DekaTutorial(ucapan, musik, nomorWhatsapp, idTelegram);
